Home & Menu Done

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,28 @@
-<p>home works!</p>
+<div id="home-page" class="section vh-100 vw-100 d-flex flex-column px-5 justify-content-center align-items-center">
+    <h1 class="fw-bolder display-1 text-center">Software Engineer</h1>
+    <p class=" fs-4 text-center">
+        Hi there, I'm <span class="fw-bold">Mohamed LAWANI Jr</span>, also known as Med Li Jr, one of the <span
+            class="fw-bold">minimalists</span>.
+    </p>
+    <div class="d-flex flex-wrap justify-content-center flex-row gap-3">
+
+        <div class="home-profil-link-content">
+            <img src="assets/icons/mail.png" height="35px" width="35px">
+            <span class=" ms-2">MedLawani.Jr@gmail.com</span>
+        </div>
+        <div class="home-profil-link-content">
+            <img src="assets/icons/github.png" height="35px" width="35px">
+            <a href="https://github.com/Med-Li-Jr" target="_blank"
+                class="text-dark text-decoration-none ms-2">Med-Li-Jr</a>
+        </div>
+        <div class="home-profil-link-content">
+            <img src="assets/icons/linked.png" height="35px" width="35px">
+            <a href="https://www.linkedin.com/in/med-li-jr/" target="_blank"
+                class="text-dark text-decoration-none ms-2">Med Li Jr</a>
+        </div>
+        <div class="home-profil-link-content">
+            <img src="assets/icons/call.png" height="35px" width="35px">
+            <span class=" ms-2">+216 56 358 459</span>
+        </div>
+    </div>
+</div>
