--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div id="my-main">
     <app-home></app-home>
     <app-menu></app-menu>
-    <app-quote quoteID="first-quote"></app-quote>
+    <app-quote quoteID="first-quote" quoteMessage="Learn what needs to be learned."></app-quote>
     <app-skills></app-skills>
-    <app-quote quoteID="second-quote"></app-quote>
+    <app-quote quoteID="second-quote" quoteMessage="Quality Over Quantity."></app-quote>
     <app-projects></app-projects>
     <app-about></app-about>
     <app-contact></app-contact>
