--- a/src/app/components/quote/quote.component.html
+++ b/src/app/components/quote/quote.component.html
@@ -1,4 +1,15 @@
-<div class="section" id="{{quoteID}}">
-    <p>quote works!</p>
-</div>
+<div class="mt-4 p-5 section quote d-flex flex-column justify-content-center align-items-center" id="{{quoteID}}">
+    <div class="content-quote d-flex flex-column justify-content-center align-items-center gap-3">
+        <p class="fs-6 align-self-start">
+            < minimalist-quote >
+        </p>
+        <h2 class="text-center">
+            {{quoteMessage}}
+        </h2>
+        <p class="fs-6 align-self-end">
+            < /minimalist-quote >
+        </p>
+    
+    </div>
 
+</div>
