--- a/src/assets/css/site.css
+++ b/src/assets/css/site.css
@@ -30,3 +30,10 @@ a{
     border-bottom: 3px solid black;
     font-weight: bolder;
 }
+
+.quote {
+    height: 200px !important;
+}
+.content-quote {
+    width: 100%;
+}
