--- a/src/app/components/quote/quote.component.html
+++ b/src/app/components/quote/quote.component.html
@@ -1,4 +1,4 @@
-<div class="mt-4 p-5 section quote d-flex flex-column justify-content-center align-items-center" id="{{quoteID}}">
+<div class="mt-4 p-5 section vh-100 quote d-flex flex-column justify-content-center align-items-center" id="{{quoteID}}">
     <div class="content-quote d-flex flex-column justify-content-center align-items-center gap-3">
         <p class="fs-6 align-self-start">
             < minimalist-quote >
