--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,8 @@
 <div id="home-page" class="section vh-100 vw-100 d-flex flex-column px-5 justify-content-center align-items-center">
     <h1 class="fw-bolder display-1 text-center">Software Engineer</h1>
     <p class=" fs-4 text-center">
-        Hi there, I'm <span class="fw-bold">Mohamed LAWANI Jr</span>, also known as Med Li Jr, one of the <span
+        Hi there, I'm <span class="fw-bold">Mohamed LAWANI Jr</span>, also known as 
+        <span class="fw-bold">Med Li Jr</span>, one of the <span
             class="fw-bold">minimalists</span>.
     </p>
     <div class="d-flex flex-wrap justify-content-center flex-row gap-3">
