--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,22 +8,22 @@
     <div class="d-flex flex-wrap justify-content-center flex-row gap-3">
 
         <div class="home-profil-link-content">
+            <img src="assets/icons/linked.png" height="35px" width="35px">
+            <a href="https://www.linkedin.com/in/med-li-jr/" target="_blank"
+                class="text-dark text-decoration-none ms-2 fs-5">Med Li Jr</a>
+        </div>
+        <div class="home-profil-link-content">
             <img src="assets/icons/mail.png" height="35px" width="35px">
-            <span class=" ms-2">MedLawani.Jr@gmail.com</span>
+            <span class="ms-2 fs-5">MedLawani.Jr@gmail.com</span>
         </div>
         <div class="home-profil-link-content">
             <img src="assets/icons/github.png" height="35px" width="35px">
             <a href="https://github.com/Med-Li-Jr" target="_blank"
-                class="text-dark text-decoration-none ms-2">Med-Li-Jr</a>
+                class="text-dark text-decoration-none ms-2 fs-5">Med-Li-Jr</a>
         </div>
-        <div class="home-profil-link-content">
-            <img src="assets/icons/linked.png" height="35px" width="35px">
-            <a href="https://www.linkedin.com/in/med-li-jr/" target="_blank"
-                class="text-dark text-decoration-none ms-2">Med Li Jr</a>
-        </div>
-        <div class="home-profil-link-content">
+        <!-- <div class="home-profil-link-content">
             <img src="assets/icons/call.png" height="35px" width="35px">
-            <span class=" ms-2">+216 56 358 459</span>
-        </div>
+            <span class="ms-2 fs-5">+216 56 358 459</span>
+        </div> -->
     </div>
 </div>
