--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -1,4 +1,4 @@
-<div id="skills-page" class="mt-5 vw-100 vw-100 vh-100 section d-flex flex-column justify-content-center">
+<div id="skills-page" class="vw-100 vh-100 section d-flex flex-column justify-content-center">
     <div class="content-skills row gx-0">
         <div class="col-md-5 ps-4">
             <p class="display-3">Skills</p>
@@ -11,39 +11,39 @@
             </p>
         </div>
         <div class="col-md-7 ps-2 d-flex flex-wrap gap-3 justify-content-center align-items-center">
-            <div class="col-md-3 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
+            <div class="col-sm-3 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
                 <img src="assets/icons/flutter_framework.png" alt="" height="50">
                 <span class="text-center">Flutter</span>
             </div>
-            <div class="col-md-3 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
+            <div class="col-sm-3 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
                 <img src="assets/icons/Android_Studio.png" alt="" height="50">
                 <span class="text-center">Android Studio</span>
             </div>
-            <div class="col-md-3 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
+            <div class="col-sm-3 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
                 <img src="assets/icons/NativeScript.png" alt="" height="50">
                 <span class="text-center">NativeScript</span>
             </div>
-            <div class="col-md-3 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
+            <div class="col-sm-3 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
                 <img src="assets/icons/angular_framework.png" class="" alt="" height="50">
                 <span class="text-center ">Angular</span>
             </div>
-            <div class="col-md-3 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
+            <div class="col-sm-3 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
                 <img src="assets/icons/NET_Core_Logo.png" alt="" height="50">
                 <span class="text-center">.Net Core</span>
             </div>
-            <div class="col-md-3 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
+            <div class="col-sm-3 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
                 <img src="assets/icons/Laravel.png" alt="" height="50">
                 <span class="text-center">Laravel</span>
             </div>
-            <div class="col-md-3 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
+            <div class="col-sm-3 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
                 <img src="assets/icons/google-firebase.png" alt="" height="50">
                 <span class="text-center">Firebase</span>
             </div>
-            <div class="col-md-3 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
+            <div class="col-sm-3 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
                 <img src="assets/icons/sql-server.png" alt="" height="50">
                 <span class="text-center">Sql Server</span>
             </div>
-            <div class="col-md-3 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
+            <div class="col-sm-3 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
                 <img src="assets/icons/MySQL.png" alt="" height="50">
                 <span class="text-center">MySql</span>
             </div>
