--- a/src/assets/css/site.css
+++ b/src/assets/css/site.css
@@ -1,10 +1,10 @@
-
-ul{
+ul {
     list-style: none;
     margin: 0 !important;
     padding: 10px 0 !important
 }
-a{
+
+a {
     text-decoration: none;
     color: black;
 }
@@ -17,7 +17,7 @@ a{
     margin-right: 1rem;
 }
 
-.my-header{
+.my-header {
     background-color: rgba(255, 255, 255, 0.9);
     width: 100%;
     position: sticky;
@@ -26,10 +26,12 @@ a{
     z-index: 99;
     border: black solid 1px;
 }
+
 .my-navbar-active {
     border-bottom: 3px solid black;
     font-weight: bolder;
 }
+
 /* 
 .quote {
     height: 200px !important;
@@ -37,6 +39,24 @@ a{
 .content-quote {
     width: 100%;
 }
+
 .colored-text {
     color: #6030b1;
+}
+
+.text-justify {
+    text-align: justify;
+}
+
+.btn-resume {
+    background-color: rgba(0, 0, 0, 0.9);
+    color: white;
+    border: solid white;
+    border-radius: 0.5rem;
+    padding: 0.6rem;
+}
+.btn-resume:hover {
+    background-color: white;
+    color: black;
+    border: solid black;
 }
