--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,3 +1,176 @@
-<div id="projects-page" class="section vh-100 vw-100 border border-dark">
-    project works
+<div id="projects-page" class="my_section mt-5 w-100  d-flex flex-column justify-content-center align-items-center">
+<div class="px-4 text-center">
+
+    <p class="display-4 fw-bold">Projects</p>
+    <p class="mt-0">
+        Here are some of my <span class="colored">projects</span>. You can see all the list <a routerLink="projects"
+            class="text-primary"> here</a>.
+    </p>
+</div>
+    <div class="d-flex flex-wrap gx-0 justify-content-center w-100 mt-3">
+        <div class="col-md-3 col-sm-3 col-lg-3 m-3">
+            <div class="card">
+                <div class="row g-0">
+
+                    <div class="col-sm-12">
+                        <img src="assets/icons/interfaces.png" class="card-img fit-cover w-100 h-100" alt="...">
+                    </div>
+
+                    <div class="col-sm-12">
+                        <div class="card-body">
+                            <h5 class="fs-5 fw-bold">
+                                <a class="link-dark text-decoration-none" href="#">Card
+                                    Title</a>
+                            </h5>
+
+                            <div class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+                            <div class="mt-2">
+                                <a href="#" class="btn btn-detail-project">See Detail</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3 col-sm-3 col-lg-3 m-3">
+            <div class="card">
+                <div class="row g-0">
+
+                    <div class="col-sm-12">
+                        <img src="assets/icons/interfaces.png" class="card-img fit-cover w-100 h-100" alt="...">
+                    </div>
+
+                    <div class="col-sm-12">
+                        <div class="card-body">
+                            <h5 class="fs-5 fw-bold">
+                                <a class="link-dark text-decoration-none" href="#">Card
+                                    Title</a>
+                            </h5>
+
+                            <div class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+                            <div class="mt-2">
+                                <a href="#" class="btn btn-detail-project">See Detail</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3 col-sm-3 col-lg-3 m-3">
+            <div class="card">
+                <div class="row g-0">
+
+                    <div class="col-sm-12">
+                        <img src="assets/icons/interfaces.png" class="card-img fit-cover w-100 h-100" alt="...">
+                    </div>
+
+                    <div class="col-sm-12">
+                        <div class="card-body">
+                            <h5 class="fs-5 fw-bold">
+                                <a class="link-dark text-decoration-none" href="#">Card
+                                    Title</a>
+                            </h5>
+
+                            <div class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+                            <div class="mt-2">
+                                <a href="#" class="btn btn-detail-project">See Detail</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- <div class="card col-md-3 col-sm-3">
+                <img class="card-img fit-cover" src="assets/icons/interfaces.png" alt="Card image">
+                <div class="card-img-overlay">
+                    <div class="d-flex flex-column justify-content-center">
+                        <h4 class="card-title">John Doe</h4>
+                        <a href="#" class="btn btn-primary">See Profile</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-3 m-3 border border-primary text-center row g-0 justify-content-between">
+                <div>
+                    <img src="assets/icons/interfaces.png" class="p-2" height="100" style="max-width: 100% ;" alt="...">
+                </div>
+                <div class="fs-6 fw-bold">Project 1</div>
+                <div class="mt-2">
+                    <a href="#" class="btn btn-detail-project">See Detail</a>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-3 m-3 border border-primary text-center row g-0 justify-content-between">
+                <div class="">
+                    <img src="assets/icons/interfaces.png" class="p-2" height="120" style="max-width: 100% ;" alt="...">
+                </div>
+                <div class="fs-6 fw-bold">Project 2</div>
+                <div class="mt-2">
+                    <a href="#" class="btn btn-detail-project">See Detail</a>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-3 m-3">
+                <div class="border text-center">
+                    <img src="assets/icons/interfaces.png" height="120" style="max-width: 100%;" class="p-2" alt="...">
+                </div>
+                <div class="text-center ">
+                    <div class="fs-5 fw-bold">Project 3</div>
+    
+                    <div class="mt-2">
+                        <a href="#" class="btn btn-detail-project">See Detail</a>
+                    </div>
+                </div>
+            </div> -->
+    </div>
+    <!-- <div class="row gx-0 justify-content-center w-100 mt-3"> -->
+    <!-- <div class="col-md-3 col-sm-3 m-3">
+                <div class="cardborder text-center">
+                    <img src="assets/icons/interfaces.png" class="card-img-top p-2" style="max-height: 150px;" alt="...">
+                    <div class="card-body">
+                        <div class="card-title fs-5 fw-bold">Project 1</div>
+                        
+                        <div class="mt-2">
+                            <a href="#" class="btn btn-detail-project">See Detail</a>
+                        </div>
+                    </div>
+                </div>
+            </div> -->
+    <!-- <div class="col-md-3 col-sm-3 m-3">
+                <div clasborders="card">
+                    <img src="assets/icons/interfaces.png" class="card-img-top p-2" style="max-height: 150px;" alt="...">
+                    <div class="card-body">
+                        <div class="card-title fs-5 fw-bold">Project 1</div>
+                        <div class="card-text fs-6 text-muted">
+                            Html, CSS, JS, C#
+                            Html, CSS, JS, C#
+                            Html, CSS, JS, C#
+                            Html, CSS, JS, C#
+                        </div>
+                        <div class="mt-2">
+                            <a href="#" class="btn btn-detail-project">Detail</a>
+                        </div>
+                    </div>
+                </div>
+            </div> -->
+    <!-- <div class="col-md-3 ">
+                <div class="card">
+                    <div class="d-flex flex-column justify-content-center g-0">
+                        <img src="assets/icons/interfaces.png" class="rounded-start  align-self-center"
+                            width="150px" alt="...">
+                        <div class="col-7">
+                            <div class="d-flex ps-2 flex-column justify-content-between h-100">
+                                <div>
+                                    <p class="fs-4 fw-bold m-0">Project 1</p>
+                                    <p class="card-text"><small class="text-muted">Html, CSS, JS, C#
+                                        Html, CSS, JS, C#
+                                        Html, CSS, JS, C#
+                                        Html, CSS, JS, C#
+                                    </small></p>
+                                </div>
+                                <p class="card-text"><a class="btn btn-outline-primary">Detail</a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div> -->
+
+    <!-- </div> -->
 </div>
