--- a/src/app/components/quote/quote.component.html
+++ b/src/app/components/quote/quote.component.html
@@ -1,15 +1,14 @@
-<div class="mt-4 p-5 section vh-100 quote d-flex flex-column justify-content-center align-items-center" id="{{quoteID}}">
-    <div class="content-quote d-flex flex-column justify-content-center align-items-center gap-3">
+<div class="my_section my-5 px-5 w-100 quote d-flex flex-column justify-content-center align-items-center"
+    id="{{quoteID}}">
+    <div class="content-quote d-flex flex-column justify-content-center align-items-center gap-3 border border-dark p-3" style="max-width: 700px;">
         <p class="fs-6 align-self-start">
-            < minimalist-quote >
+            < minimalist-quote>
         </p>
-        <h2 class="text-center">
+        <p class="fs-4 fw-bold text-center">
             {{quoteMessage}}
-        </h2>
-        <p class="fs-6 align-self-end">
-            < /minimalist-quote >
         </p>
-    
+        <p class="fs-6 align-self-end">
+            < /minimalist-quote>
+        </p>
     </div>
-
 </div>
