--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -1,16 +1,16 @@
-<div id="skills-page" class="vw-100 vh-100 section d-flex flex-column justify-content-center">
-    <div class="content-skills row gx-0">
-        <div class="col-md-5 ps-4">
-            <p class="display-3">Skills</p>
-            <p class="fs-4">
-                I've been working, these last years, with differents <span class="colored-text">technologies</span> and
-                <span class="colored-text">languages</span>
-                such as :
-                <span class="fw-bold fs-5"> HTML, CSS, Bootstrap, JavaScript, TypeScript, Dart, C#, PHP, Java, SQL,
-                    Git/Github, VS code, Figma, etc... . </span>
-            </p>
-        </div>
-        <div class="col-md-7 ps-2 d-flex flex-wrap gap-3 justify-content-center align-items-center">
+<div id="skills-page" class="my_section mt-5 w-100 d-flex flex-column justify-content-center">
+    <div class="px-4 text-center">
+        <p class="display-4 fw-bold">Skills</p>
+        <p class="fs-5">
+            I've been working, these last years, with differents <span class="colored-text">technologies</span>
+            and <span class="colored-text">languages</span> such as : 
+            <br>
+            <small class="fw-bold"> HTML, CSS, Bootstrap, JavaScript, TypeScript, Dart, C#, PHP, Java, SQL,
+                Git/Github, VS code, Figma, etc... . </small>
+        </p>
+    </div>
+    <div class="content-skills row gx-0 mt-3">
+        <div class="col-md-12 ps-2 d-flex flex-wrap gap-3 justify-content-center align-items-center">
             <div class="col-sm-3 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
                 <img src="assets/icons/flutter_framework.png" alt="" height="50">
                 <span class="text-center">Flutter</span>
