--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,10 +1,11 @@
-<div id="about-page"
-    class="section vh-100 vw-100 border border-dark d-flex flex-column justify-content-center align-items-center">
-    <div class="row gx-0 px-5 justify-content-center">
-        <p class="display-5 text-center fw-bold">About</p>
-        <p class="fs-6 mt-0 text-center">
+<div id="about-page" class="my_section mt-5 w-100 d-flex flex-column justify-content-center align-items-center">
+    <div class="px-4 text-center">
+        <p class="display-4 fw-bold">About</p>
+        <p class="mt-0 ">
             A bit <span class="colored-text">about</span> me. Who Am I?
         </p>
+    </div>
+    <div class="row gx-0 px-5 justify-content-center">
         <div class="col-sm-5 ps-2 d-flex flex-wrap gap-3 justify-content-center align-items-center">
             <div class="about_img" data-aos="fade-down" data-aos-delay="50">
                 <svg id="fe80fb2b-bcaf-407e-919b-306adc32f78b" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg"
@@ -100,20 +101,17 @@
             <p class="fs-6" data-aos="fade-down" data-aos-delay="450">
                 Want to know a little more about me? Feel free to <span class="colored-text">contact</span> me :
             </p>
-            <div class="d-flex flex-wrap align-items-center flex-row gap-3">
+            <div class="d-flex flex-wrap flex-row gap-2">
 
-                <div class="d-flex justify-content-center align-items-center">
-                    <a href="assets/icons/Mohamed_Lawani_vEN.pdf" target="_blank" class="btn btn-resume">See Resume</a>
+                <div class="d-flex align-items-center">
+                    <img src="assets/icons/mail.png" height="27px" width="27px">
+                    <span class="ms-2">MedLawani.Jr@gmail.com</span>
                 </div>
-                <div class="d-flex justify-content-center align-items-center">
-                    <img src="assets/icons/linked.png" height="25px" width="25px">
+
+                <div class="d-flex align-items-center">
+                    <img src="assets/icons/linked.png" height="27px" width="27px">
                     <a href="https://www.linkedin.com/in/med-li-jr/" target="_blank"
                         class="text-dark text-decoration-none ms-2">Med Li Jr</a>
-                </div>
-
-                <div class="d-flex justify-content-center align-items-center">
-                    <img src="assets/icons/mail.png" height="25px" width="25px">
-                    <span class="ms-2">MedLawani.Jr@gmail.com</span>
                 </div>
             </div>
         </div>
