--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,3 +1,3 @@
-<div id="contact-page" class="section vh-100 vw-100 border border-dark">
+<div id="contact-page" class=" vh-100 w-100 vw-100 border border-dark">
     contract works
 </div>
