--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,11 +1,10 @@
-<div id="home-page" class="section vh-100 vw-100 d-flex flex-column px-5 justify-content-center align-items-center">
+<div id="home-page" class="vh-100 w-100 d-flex flex-column px-5 justify-content-center align-items-center">
     <h1 class="fw-bolder display-1 text-center">Software Engineer</h1>
-    <p class=" fs-4 text-center">
-        Hi there, I'm <span class="fw-bold">Mohamed LAWANI Jr</span>, also known as 
-        <span class="fw-bold">Med Li Jr</span>, one of the <span
-            class="fw-bold">minimalists</span>.
+    <p class="fs-4 text-center mb-0">
+        Hi there, I'm <span class="fw-bold">Mohamed LAWANI Jr</span>, also known as
+        <span class="fw-bold">Med Li Jr</span>, one of the <span class="fw-bold">minimalists</span>.
     </p>
-    <div class="d-flex flex-wrap justify-content-center flex-row gap-3">
+    <div class="d-flex mt-3 flex-wrap justify-content-center flex-row gap-3">
 
         <div class="home-profil-link-content">
             <img src="assets/icons/linked.png" height="35px" width="35px">
@@ -26,4 +25,9 @@
             <span class="ms-2 fs-5">+216 56 358 459</span>
         </div> -->
     </div>
+    <div class="mt-3 d-flex align-items-center">
+        <a href="assets/icons/Mohamed_Lawani_vEN.pdf" target="_blank" class="btn btn-resume">See
+            Resume</a>
+    </div>
+
 </div>
