First Page Done

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -5,8 +5,8 @@
             A bit <span class="colored-text">about</span> me. Who Am I?
         </p>
     </div>
-    <div class="row gx-0 px-5 justify-content-center">
-        <div class="col-sm-5 ps-2 d-flex flex-wrap gap-3 justify-content-center align-items-center">
+    <div class="row gx-0 justify-content-center content-page">
+        <div class="col-lg-5 col-sm-10 col-md-7 ps-2 d-flex flex-wrap gap-3 justify-content-center align-items-center">
             <div class="about_img" data-aos="fade-down" data-aos-delay="50">
                 <svg id="fe80fb2b-bcaf-407e-919b-306adc32f78b" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 1032 741.75278">
@@ -89,12 +89,12 @@
                 </svg>
             </div>
         </div>
-        <div class="col-lg-7 p-3">
+        <div class="col-lg-7 col-sm-12 col-md-11 p-3">
             <p class="fs-4 fw-bold">I'm Med Li Jr.</p>
             <p class="fs-6 text-justify" data-aos="fade-down" data-aos-delay="450">
                 Hi, Med Li Jr comes from my full name Mohamed Lawani Jr.
                 I am a <span class="colored-text">Software Engineer</span>
-                with several years of experience in the IT Field.
+                with several years of experience in application development.
                 I have a strong passion for <span class="colored-text">building great apps</span>
                 that positively impact the world around us.
             </p>
