--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,29 +1,27 @@
-<div id="home-page" class="vh-100 w-100 d-flex flex-column px-5 justify-content-center align-items-center">
-    <h1 class="fw-bolder display-1 text-center">Software Engineer</h1>
-    <p class="fs-4 text-center mb-0">
-        Hi there, I'm <span class="fw-bold">Mohamed LAWANI Jr</span>, also known as
-        <span class="fw-bold">Med Li Jr</span>, one of the <span class="fw-bold">minimalists</span>.
-    </p>
-    <div class="d-flex mt-3 flex-wrap justify-content-center flex-row gap-3">
+<div id="home-page" class="vh-100 w-100 d-flex flex-column justify-content-center align-items-center">
+    <div class="content-page">
+        <h1 class="fw-bolder display-1 text-center">Software Engineer</h1>
+        <p class="fs-4 text-center mb-0">
+            Hi there, I'm <span class="fw-bold">Mohamed LAWANI Jr</span>, also known as
+            <span class="fw-bold">Med Li Jr</span>, one of the <span class="fw-bold">minimalists</span>.
+        </p>
+    </div>
+    <div class="d-flex gap-3 mt-3 flex-wrap justify-content-center flex-row">
 
-        <div class="home-profil-link-content">
+        <div class="home-link d-flex justify-content-center align-items-center">
             <img src="assets/icons/linked.png" height="35px" width="35px">
             <a href="https://www.linkedin.com/in/med-li-jr/" target="_blank"
                 class="text-dark text-decoration-none ms-2 fs-5">Med Li Jr</a>
         </div>
-        <div class="home-profil-link-content">
-            <img src="assets/icons/mail.png" height="35px" width="35px">
-            <span class="ms-2 fs-5">MedLawani.Jr@gmail.com</span>
-        </div>
-        <div class="home-profil-link-content">
+        <div class="home-link d-flex justify-content-center align-items-center">
             <img src="assets/icons/github.png" height="35px" width="35px">
             <a href="https://github.com/Med-Li-Jr" target="_blank"
                 class="text-dark text-decoration-none ms-2 fs-5">Med-Li-Jr</a>
         </div>
-        <!-- <div class="home-profil-link-content">
-            <img src="assets/icons/call.png" height="35px" width="35px">
-            <span class="ms-2 fs-5">+216 56 358 459</span>
-        </div> -->
+        <div class="home-link d-flex justify-content-center align-items-center">
+            <img src="assets/icons/mail.png" height="35px" width="35px">
+            <span class="ms-2 fs-5">MedLawani.Jr@gmail.com</span>
+        </div>
     </div>
     <div class="mt-3 d-flex align-items-center">
         <a href="assets/icons/Mohamed_Lawani_vEN.pdf" target="_blank" class="btn btn-resume">See
