--- a/src/app/components/quote/quote.component.html
+++ b/src/app/components/quote/quote.component.html
@@ -1,6 +1,6 @@
-<div class="my_section my-5 px-5 w-100 quote d-flex flex-column justify-content-center align-items-center"
-    id="{{quoteID}}">
-    <div class="content-quote d-flex flex-column justify-content-center align-items-center gap-3 border border-dark p-3" style="max-width: 700px;">
+<div class="my_section px-5 w-100 quote d-flex flex-column justify-content-center align-items-center" id="{{quoteID}}">
+    <div class="content-quote d-flex flex-column justify-content-center align-items-center gap-3 border border-dark p-3"
+        style="max-width: 700px;">
         <p class="fs-6 align-self-start">
             < minimalist-quote>
         </p>
