--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -1,51 +1,64 @@
-<div id="skills-page" class="my_section mt-5 w-100 d-flex flex-column justify-content-center">
-    <div class="px-4 text-center">
+<div id="skills-page" class="my_section w-100 d-flex flex-column justify-content-center align-items-center">
+    <div class="text-center content-page mb-3">
         <p class="display-4 fw-bold">Skills</p>
-        <p class="fs-5">
-            I've been working, these last years, with differents <span class="colored-text">technologies</span>
-            and <span class="colored-text">languages</span> such as : 
-            <br>
-            <small class="fw-bold"> HTML, CSS, Bootstrap, JavaScript, TypeScript, Dart, C#, PHP, Java, SQL,
-                Git/Github, VS code, Figma, etc... . </small>
-        </p>
+        <div class="row g-0 d-flex justify-content-center">
+            <p class="col-sm-12 col-md-11 col-lg-10 col-xl-9 m-0">
+                <span class="fs-6">
+                    I've been working, these last years, with differents <span class="colored-text">technologies</span>
+                    and <span class="colored-text">languages</span> such as:
+                </span>
+                <small class="fw-bold"> HTML, CSS, Bootstrap, JavaScript, TypeScript, Dart, C#, PHP, Java, SQL,
+                    Git/Github, VS code, Figma, etc... . </small>
+            </p>
+        </div>
     </div>
     <div class="content-skills row gx-0 mt-3">
         <div class="col-md-12 ps-2 d-flex flex-wrap gap-3 justify-content-center align-items-center">
-            <div class="col-sm-3 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
-                <img src="assets/icons/flutter_framework.png" alt="" height="50">
-                <span class="text-center">Flutter</span>
+
+            <div
+                class="col-md-3 col-5 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
+                <img class="" src="assets/icons/flutter_framework.png" alt="" height="60px">
+                <p class="text-center fw-bolder m-0 mt-2">Flutter</p>
             </div>
-            <div class="col-sm-3 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
-                <img src="assets/icons/Android_Studio.png" alt="" height="50">
-                <span class="text-center">Android Studio</span>
+            <div
+                class="col-md-3 col-5 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
+                <img class="" src="assets/icons/Android_Studio.png" alt="" height="60px">
+                <p class="text-center fw-bolder m-0 mt-2">Android Studio</p>
             </div>
-            <div class="col-sm-3 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
-                <img src="assets/icons/NativeScript.png" alt="" height="50">
-                <span class="text-center">NativeScript</span>
+            <div
+                class="col-md-3 col-5 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
+                <img class="" src="assets/icons/NativeScript.png" alt="" height="60px">
+                <p class="text-center fw-bolder m-0 mt-2">NativeScript</p>
             </div>
-            <div class="col-sm-3 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
-                <img src="assets/icons/angular_framework.png" class="" alt="" height="50">
-                <span class="text-center ">Angular</span>
+            <div
+                class="col-md-3 col-5 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
+                <img class="" src="assets/icons/angular_framework.png" alt="" height="60px">
+                <p class="text-center fw-bolder m-0 mt-2 ">Angular</p>
             </div>
-            <div class="col-sm-3 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
-                <img src="assets/icons/NET_Core_Logo.png" alt="" height="50">
-                <span class="text-center">.Net Core</span>
+            <div
+                class="col-md-3 col-5 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
+                <img class="" src="assets/icons/NET_Core_Logo.png" alt="" height="60px">
+                <p class="text-center fw-bolder m-0 mt-2">.Net Core</p>
             </div>
-            <div class="col-sm-3 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
-                <img src="assets/icons/Laravel.png" alt="" height="50">
-                <span class="text-center">Laravel</span>
+            <div
+                class="col-md-3 col-5 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
+                <img class="" src="assets/icons/Laravel.png" alt="" height="60px">
+                <p class="text-center fw-bolder m-0 mt-2">Laravel</p>
             </div>
-            <div class="col-sm-3 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
-                <img src="assets/icons/google-firebase.png" alt="" height="50">
-                <span class="text-center">Firebase</span>
+            <div
+                class="col-md-3 col-5 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
+                <img class="" src="assets/icons/google-firebase.png" alt="" height="60px">
+                <p class="text-center fw-bolder m-0 mt-2">Firebase</p>
             </div>
-            <div class="col-sm-3 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
-                <img src="assets/icons/sql-server.png" alt="" height="50">
-                <span class="text-center">Sql Server</span>
+            <div
+                class="col-md-3 col-5 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
+                <img class="" src="assets/icons/sql-server.png" alt="" height="60px">
+                <p class="text-center fw-bolder m-0 mt-2">Sql Server</p>
             </div>
-            <div class="col-sm-3 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
-                <img src="assets/icons/MySQL.png" alt="" height="50">
-                <span class="text-center">MySql</span>
+            <div
+                class="col-md-3 col-5 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
+                <img class="" src="assets/icons/MySQL.png" alt="" height="60px">
+                <p class="text-center fw-bolder m-0 mt-2">MySql</p>
             </div>
         </div>
     </div>
