--- a/src/assets/css/site.css
+++ b/src/assets/css/site.css
@@ -1,3 +1,6 @@
+body {
+    /* background-color: #f5f5f9; */
+}
 ul {
     list-style: none;
     margin: 0 !important;
@@ -12,13 +15,7 @@ a {
     padding-top: 70px !important;
     margin-top: 0 !important;
 }
-.home-profil-link-content {
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-right: 1rem;
-}
 
 .my-header {
     background-color: rgba(255, 255, 255, 0.9);
@@ -37,11 +34,14 @@ a {
 
 
 .quote {
-    margin-top: 3rem !important;
-    margin-bottom: 2rem !important;
+    margin: 2rem 0 !important;
 }
 .content-quote {
     width: 100%;
+    background-color: #fff;
+    box-shadow: 5px 5px 8px #333, 10px 10px 8px #aaa, 15px 15px 8px #fff;
+    /* box-shadow: 10px 10px 5px #aaaaaa; */
+    /* z-index: 99; */
 }
 
 .colored-text {
@@ -66,15 +66,15 @@ a {
 }
 
 .btn-detail-project {
-    background-color: #0d6efd;
+    background-color: black;
     color: white;
     border-radius: 0.5rem;
     padding: 0.6rem 0.8rem;
 }
 .btn-detail-project:hover {
     background-color: white;
-    color: #0d6efd;
-    border: solid #0d6efd;
+    color: black;
+    border: solid black;
 }
 .fit-cover {
     object-fit: cover;
@@ -89,4 +89,14 @@ a {
   #about-page{
     margin-bottom: 5rem !important;
     margin-top: 0rem !important;
+  }
+  .myImg {
+    max-height: 100%;
+    height: 100%;
+    width: auto;
+    max-width: 100%;
+  }
+
+  .content-page {
+    max-width: 90%;
   }
