Init update interfaces Done

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,11 +1,11 @@
 <header class="my-header">
     <div class="d-flex justify-content-between align-items-center px-3">
-        <div class="title"><a href="#home-page" class="text-dark text-decoration-none fw-bolder"> Med Li Jr </a></div>
+        <div class="title"><a [routerLink] = "['/']"  fragment="home-page" class="text-dark text-decoration-none fw-bolder"> Med Li Jr </a></div>
         <nav class="">
             <ul class="d-flex">
-                <li class="nav-li"><a href="#skills-page" class="nav-link text-dark"> skills </a></li>
-                <li class="nav-li"><a href="#projects-page" class="nav-link text-dark"> projects </a></li>
-                <li class="nav-li"><a href="#about-page" class="nav-link text-dark"> about </a></li>
+                <li class="nav-li" id="nav-skills"><a [routerLink] = "['/']"  fragment="skills-page" class="nav-link text-dark"> skills </a></li>
+                <li class="nav-li" id="nav-projects"><a [routerLink] = "['/']"  fragment="projects-page" class="nav-link text-dark"> projects </a></li>
+                <li class="nav-li" id="nav-about"><a [routerLink] = "['/']"  fragment="about-page" class="nav-link text-dark"> about </a></li>
                 <!-- <li class="nav-li contact-page"><a href="#contact-page" class="nav-link text-dark"> contact </a></li> -->
             </ul>
         </nav>
