--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,1 @@
-<div id="my-main">
-    <app-home></app-home>
-    <app-menu></app-menu>
-    <div class="d-flex flex-row justify-content-center">
-        <div class="" style="max-width: 1500px">
-            <app-quote quoteID="first-quote" quoteMessage="Learn what needs to be learned."></app-quote>
-            <app-skills></app-skills>
-            <app-quote quoteID="second-quote" quoteMessage="Quality Over Quantity."></app-quote>
-            <app-projects></app-projects>
-            <app-about></app-about>
-        </div>
-    </div>
-</div>
+<router-outlet></router-outlet>
