--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -10,85 +10,13 @@
     </div>
     <div class="d-flex flex-wrap gx-0 justify-content-center w-100 mt-3">
         <div class="col-md-5 col-sm-6 col-lg-3 m-3">
-            <div class="form-control border border-dark text-center">
-
-                <div class="card">
-                    <div class="row g-0">
-
-                        <div class="d-flex justify-content-center" style="height: 200px;">
-                            <img src="assets/icons/interfaces.png" class="myImg" alt="...">
-                        </div>
-
-                        <div class="col-sm-12">
-                            <div class="card-body">
-                                <h5 class="fs-5 fw-bold">
-                                    <a class="link-dark text-decoration-none" href="#">Card
-                                        Title</a>
-                                </h5>
-
-                                <div class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
-                                <div class="mt-2">
-                                    <a href="#" class="btn btn-detail-project">See Detail</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <app-card-project></app-card-project>
         </div>
         <div class="col-md-5 col-sm-6 col-lg-3 m-3">
-            <div class="form-control border border-dark text-center">
-
-                <div class="card">
-                    <div class="row g-0">
-
-                        <div class="d-flex justify-content-center" style="height: 200px;">
-                            <img src="assets/icons/Detail-Missions.png" class="myImg" alt="...">
-                        </div>
-
-                        <div class="col-sm-12">
-                            <div class="card-body">
-                                <h5 class="fs-5 fw-bold">
-                                    <a class="link-dark text-decoration-none" href="#">Card
-                                        Title</a>
-                                </h5>
-
-                                <div class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
-                                <div class="mt-2">
-                                    <a href="#" class="btn btn-detail-project">See Detail</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <app-card-project></app-card-project>
         </div>
         <div class="col-md-5 col-sm-6 col-lg-3 m-3">
-            <div class="form-control border border-dark text-center">
-
-                <div class="card">
-                    <div class="row g-0">
-
-                        <div class="d-flex justify-content-center" style="height: 200px;">
-                            <img src="assets/icons/interfaces.png" class="myImg" alt="...">
-                        </div>
-
-                        <div class="col-sm-12">
-                            <div class="card-body">
-                                <h5 class="fs-5 fw-bold">
-                                    <a class="link-dark text-decoration-none" href="#">Card
-                                        Title</a>
-                                </h5>
-
-                                <div class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
-                                <div class="mt-2">
-                                    <a href="#" class="btn btn-detail-project">See Detail</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <app-card-project></app-card-project>
         </div>
     </div>
 </div>
