--- a/src/app/components/projects/card-project/card-project.component.html
+++ b/src/app/components/projects/card-project/card-project.component.html
@@ -1,4 +1,112 @@
-<div class="form-control border border-dark text-center">
+<div class="row g-0 p-3 justify-content-center align-items-center">
+    <div class="col-lg-6 col-md-10 col-sm-10 p-2 border border-dark">
+        <!-- <div class="d-flex justify-content-center" style="object-fit: cover;">
+            <img src="assets/icons/Detail-Missions.png" class="myImg" alt="...">
+        </div> -->
+
+        <div id="{{currentProject.carousel_name}}" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <!-- <div *ngIf="currentProject.images_app.length > 0"> -->
+
+                    <button *ngFor="let item of currentProject.images_app; let i = index"
+                            type="button" [attr.data-bs-target]="'#' + currentProject.carousel_name"
+                        [attr.data-bs-slide-to]="'' + i" class="{{item.split(';')[0]}} bg-dark" aria-current="true"
+                        [attr.aria-label]="'Slide ' + (i+1)"></button>
+<!-- 
+                    <div *ngFor="let item of currentProject.images_app; let i = index">
+                        <button *ngIf="i != 0" type="button" [attr.data-bs-target]="'#' + currentProject.carousel_name"
+                            [attr.data-bs-slide-to]="''+ (i+1)" class="bg-dark" aria-current="true"
+                            [attr.aria-label]="'Slide '+ (i+1)"></button>
+                    </div> -->
+                <!-- </div> -->
+                <!-- <button type="button" [attr.data-bs-target]="'#' + currentProject.carousel_name"
+                    data-bs-slide-to="1" class="bg-dark" aria-label="Slide 2"></button>
+                <button type="button" [attr.data-bs-target]="'#' + currentProject.carousel_name"
+                    data-bs-slide-to="2" class="bg-dark" aria-label="Slide 3"></button> -->
+            </div>
+            <div class="carousel-inner">
+
+                <!-- <div *ngIf="currentProject.images_app.length > 0"> -->
+                    <!-- <div class="carousel-item"> -->
+                        <div *ngFor="let item of currentProject.images_app; let i = index"
+                            class="carousel-item {{item.split(';')[0]}}">
+                            <div class="d-flex justify-content-center p-3" style="height: 300px">
+                                <img src="{{item.split(';')[1]}}" class="d-block myImg" alt="...">
+                            </div>
+                        <!-- </div> -->
+<!-- 
+                        <div *ngFor="let item of currentProject.images_app; let i = index">
+                            <div *ngIf="i != 0" class="carousel-item">
+                                <div class="d-flex justify-content-center p-3" style="height: 300px">
+                                    <img src="{{item}}" class="d-block myImg" alt="...">
+                                </div>
+                            </div>
+                        </div> -->
+                    </div>
+                <!-- </div> -->
+                <!-- <div class="carousel-item">
+                    <div class="d-flex justify-content-center p-3" style="height: 300px">
+                        <img src="assets/icons/Detail-Missions.png" class="d-block myImg" alt="...">
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="d-flex justify-content-center p-3" style="height: 300px">
+                        <img src="assets/icons/interfaces.png" class="d-block myImg" alt="...">
+                    </div>
+                </div> -->
+            </div>
+            <button class="carousel-control-prev" type="button"
+                [attr.data-bs-target]="'#' + currentProject.carousel_name" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon bg-dark" aria-hidden="true"></span>
+                <span class="visually-hidden  text-dark">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button"
+                [attr.data-bs-target]="'#' + currentProject.carousel_name" data-bs-slide="next">
+                <span class="carousel-control-next-icon bg-dark" aria-hidden="true"></span>
+                <span class="visually-hidden text-dark">Next</span>
+            </button>
+        </div>
+    </div>
+
+    <div class="col-lg-6 col-md-10 col-sm-10 text-end mt-2">
+
+        <div class="card-body p-2 pe-0">
+            <h5 class="fs-3 fw-bold">
+                <span class="link-dark text-decoration-none">
+                    <img *ngIf="currentProject.is_mobile" src="assets/icons/mobile.png" height="25px" width="25px" class="mx-1" alt="...">
+                    <img *ngIf="currentProject.is_web" src="assets/icons/website.png" height="25px" width="25px" class="mx-1" alt="...">    
+                    {{currentProject.name}}
+                </span>
+            </h5>
+
+            <div class="description-project">
+                <div class="d-flex align-items-center my-2 p-3 fs-6">
+                    {{currentProject.description}}
+                </div>
+            </div>
+            <div class="">
+                <div class="d-flex flex-wrap gap-2 align-items-center justify-content-end my-3">
+                    <span class="badge bg-secondary p-2"
+                        *ngFor="let item of currentProject.technologies">{{item}}</span>
+                    <!-- <span class="badge bg-secondary p-2">Angular</span>
+                    <span class="badge bg-secondary p-2">Flutter</span>
+                    <span class="badge bg-secondary p-2">.Net Core</span>
+                    <span class="badge bg-secondary p-2">Angular</span>
+                    <span class="badge bg-secondary p-2">Flutter</span> -->
+                </div>
+            </div>
+
+            <div class="mt-1" *ngIf="currentProject.link_url.length > 0">
+                <a href="{{currentProject.link_url}}" target="_blank" class="btn btn-detail-project fw-bold">
+                    <small class="fs-6">Live Demo</small>
+                </a>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+<!-- <div class="form-control border border-dark text-center">
 
     <div class="card">
         <div class="row g-0">
@@ -17,19 +125,19 @@
 
                     <div class="d-flex flex-wrap gap-2 align-items-center justify-content-center my-3">
                         <div class="div">
-                            <img src="assets/icons/website.png" height="20px" width="20px" class="mx-1" alt="...">
+                            <img src="assets/icons/website.png" height="25px" width="25px" class="mx-1" alt="...">
                             <small class="fs-6">.Net Core / Angular</small>
                         </div>
                         <div>
-                            <img src="assets/icons/mobile.png" height="20px" width="20px" class="mx-1" alt="...">
+                            <img src="assets/icons/mobile.png" height="25px" width="25px" class="mx-1" alt="...">
                             <small class="fs-6">Flutter</small>
                         </div>
                     </div>
                     <div class="mt-2">
-                        <a href="#" class="btn btn-detail-project">See Detail</a>
+                        <a routerLink="/projects/flettapps" class="btn btn-detail-project">See Detail</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+</div> -->
