--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="row gx-0 justify-content-center content-page">
         <div class="col-lg-5 col-sm-10 col-md-7 ps-2 d-flex flex-wrap gap-3 justify-content-center align-items-center">
-            <div class="about_img" data-aos="fade-down" data-aos-delay="50">
+            <div style="width: 100%; height: 100%" class="about_img" data-aos="fade-down" data-aos-delay="50">
                 <svg id="fe80fb2b-bcaf-407e-919b-306adc32f78b" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 1032 741.75278">
                     <title>profile</title>
