--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,24 +7,24 @@
         </p>
     </div>
     <div class="d-flex gap-3 mt-3 flex-wrap justify-content-center flex-row">
-
-        <div class="home-link d-flex justify-content-center align-items-center">
-            <img src="assets/icons/linked.png" height="35px" width="35px">
-            <a href="https://www.linkedin.com/in/med-li-jr/" target="_blank"
-                class="text-dark text-decoration-none ms-2 fs-5">Med Li Jr</a>
-        </div>
-        <div class="home-link d-flex justify-content-center align-items-center">
-            <img src="assets/icons/github.png" height="35px" width="35px">
-            <a href="https://github.com/Med-Li-Jr" target="_blank"
-                class="text-dark text-decoration-none ms-2 fs-5">Med-Li-Jr</a>
-        </div>
+        
         <div class="home-link d-flex justify-content-center align-items-center">
             <img src="assets/icons/mail.png" height="35px" width="35px">
             <span class="ms-2 fs-5">MedLawani.Jr@gmail.com</span>
         </div>
+        <div class="home-link d-flex justify-content-center align-items-center">
+            <img src="assets/icons/linked.png" height="35px" width="35px">
+            <a href="https://www.linkedin.com/in/medli-jr/" target="_blank"
+            class="text-dark text-decoration-none ms-2 fs-5">Med Li Jr</a>
+        </div>
+        <div class="home-link d-flex justify-content-center align-items-center">
+            <img src="assets/icons/github.png" height="35px" width="35px">
+            <a href="https://github.com/Med-Li-Jr" target="_blank"
+            class="text-dark text-decoration-none ms-2 fs-5">Med-Li-Jr</a>
+        </div>
     </div>
     <div class="mt-3 d-flex align-items-center">
-        <a href="assets/icons/Mohamed_Lawani_vEN.pdf" target="_blank" class="btn btn-resume">See
+        <a href="assets/icons/Mohamed_Lawani_vEN.pdf" target="_blank" class="btn btn-resume fw-bold">See
             Resume</a>
     </div>
 
