--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,22 +1,21 @@
-<div id="projects-page" class="my_section w-100  d-flex flex-column justify-content-center align-items-center">
+<div id="projects-page" class="my_section w-100 d-flex flex-column justify-content-center align-items-center">
     <div class="text-center content-page mb-3">
         <p class="display-4 fw-bold">Projects</p>
         <div class="row g-0 d-flex justify-content-center">
             <p class="col-sm-12 fs-6 m-0">
-                Here are some of my <span class="colored">projects</span>. You can see all the list <a
-                    routerLink="projects" class="text-primary"> here</a>.
+                Here are some of my projects that I have worked on over these last years.
             </p>
         </div>
     </div>
     <div class="d-flex flex-wrap gx-0 justify-content-center w-100 mt-3">
-        <div class="col-md-5 col-sm-6 col-lg-3 m-3">
-            <app-card-project></app-card-project>
+        <div class="col-md-11" *ngFor="let project of allProjects">
+            <app-card-project [currentProject]="project"></app-card-project>
         </div>
-        <div class="col-md-5 col-sm-6 col-lg-3 m-3">
-            <app-card-project></app-card-project>
+        <!-- <div class="col-md-11 mt-3">
+            <app-card-project carouselId="2"></app-card-project>
         </div>
-        <div class="col-md-5 col-sm-6 col-lg-3 m-3">
-            <app-card-project></app-card-project>
-        </div>
+        <div class="col-md-11 mt-3">
+            <app-card-project carouselId="3"></app-card-project>
+        </div> -->
     </div>
 </div>
